<resources>
    <string name="app_name">MovieDB</string>
    <string name="app_title">MovieDB</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="in_cinema">In Cinema</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="save_changes">Save changes</string>
    <string name="sign_up">Sign up</string>
    <string name="password2">Repeat password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="profile_pic">Profile picture:</string>
    <string name="recommendations">Recommendations</string>
</resources>
